disable bootstrap lib

--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
         <link
             href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i,700,900&display=swap&subset=cyrillic"
             rel="stylesheet">
-        <link
-            rel="stylesheet"
-            href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-            integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-            crossorigin="anonymous">
     </head>
     <body>
         <main>
@@ -53,7 +48,7 @@
                                         </small>
                                     </h2>
                                     <ul class="features-list">
-                                        <li class="features-list__item d-flex align-items-center">
+                                        <li class="features-list__item">
                                             <div class="features-list__number-box">
                                                 <span class="features-list__number">2в1</span>
                                             </div>
@@ -63,7 +58,7 @@
                                                 и возвращает эстетичный вид
                                             </p>
                                         </li>
-                                        <li class="features-list__item d-flex align-items-center">
+                                        <li class="features-list__item">
                                             <div class="features-list__number-box">
                                                 <span class="features-list__number">1</span>
                                             </div>
@@ -74,7 +69,7 @@
                                                 на ногтях и коже
                                             </p>
                                         </li>
-                                        <li class="features-list__item d-flex align-items-center">
+                                        <li class="features-list__item">
                                             <div class="features-list__number-box">
                                                 <span class="features-list__number">2</span>
                                             </div>
