fix non-effective list

--- a/index.html
+++ b/index.html
@@ -218,51 +218,57 @@
                     </div>
                     <ul class="non-effective-list non-effective__list">
                         <li class="non-effective-list__item non-effective-list__item_miracle">
-                            <div class="non-effective-list__item-wrapper">
-                                <h3 class="non-effective-list__item-title">Чудо-средства</h3>
-                                <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
-                                </p>
-                                <p class="non-effective-list__text">
-                                    Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
-                                    уже поражена грибком, не может выздороветь до полного его отрастания.
-                                    Единственный способ вылечить грибок –
-                                    <strong>
-                                        подавлять его распространение все время, пока ноготь не отрастет заново.
-                                    </strong>
-                                    Для этого требуется 4-6 месяцев.
-                                </p>
+                            <div class="non-effective-list__overflow">
+                                <div class="non-effective-list__item-wrapper">
+                                    <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                                    <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                                    </p>
+                                    <p class="non-effective-list__text">
+                                        Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                        уже поражена грибком, не может выздороветь до полного его отрастания.
+                                        Единственный способ вылечить грибок –
+                                        <strong>
+                                            подавлять его распространение все время, пока ноготь не отрастет заново.
+                                        </strong>
+                                        Для этого требуется 4-6 месяцев.
+                                    </p>
+                                </div>
                             </div>
                         </li>
                         <li class="non-effective-list__item non-effective-list__item_cream">
-                            <div class="non-effective-list__item-wrapper">
-                                <h3 class="non-effective-list__item-title">Чудо-средства</h3>
-                                <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
-                                </p>
-                                <p class="non-effective-list__text">
-                                    Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
-                                    уже поражена грибком, не может выздороветь до полного его отрастания.
-                                    Единственный способ вылечить грибок –
-                                    <strong>
-                                        подавлять его распространение все время, пока ноготь не отрастет заново.
-                                    </strong>
-                                    Для этого требуется 4-6 месяцев.
-                                </p>
+                            <div class="non-effective-list__overflow">
+                                <div class="non-effective-list__item-wrapper">
+                                    <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                                    <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                                    </p>
+                                    <p class="non-effective-list__text">
+                                        Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                        уже поражена грибком, не может выздороветь до полного его отрастания.
+                                        Единственный способ вылечить грибок –
+                                        <strong>
+                                            подавлять его распространение все время, пока ноготь не отрастет заново.
+                                        </strong>
+                                        Для этого требуется 4-6 месяцев.
+                                    </p>
+                                </div>
                             </div>
                         </li>
                         <li class="non-effective-list__item non-effective-list__item_pill">
-                            <div class="non-effective-list__item-wrapper">
-                                <h3 class="non-effective-list__item-title">Чудо-средства</h3>
-                                <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
-                                </p>
-                                <p class="non-effective-list__text">
-                                    Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
-                                    уже поражена грибком, не может выздороветь до полного его отрастания.
-                                    Единственный способ вылечить грибок –
-                                    <strong>
-                                        подавлять его распространение все время, пока ноготь не отрастет заново.
-                                    </strong>
-                                    Для этого требуется 4-6 месяцев.
-                                </p>
+                            <div class="non-effective-list__overflow">
+                                <div class="non-effective-list__item-wrapper">
+                                    <h3 class="non-effective-list__item-title">Чудо-средства</h3>
+                                    <p class="non-effective-list__item-subtitle">Обещают, что избавят от грибка меньше, чем за месяц, хотя это невозможно.
+                                    </p>
+                                    <p class="non-effective-list__text">
+                                        Ноготь – это роговой слой кожи. Он не имеет живых клеток. Часть ногтя, которая
+                                        уже поражена грибком, не может выздороветь до полного его отрастания.
+                                        Единственный способ вылечить грибок –
+                                        <strong>
+                                            подавлять его распространение все время, пока ноготь не отрастет заново.
+                                        </strong>
+                                        Для этого требуется 4-6 месяцев.
+                                    </p>
+                                </div>
                             </div>
                         </li>
                     </ul>
