--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 </div>
                                 <figcaption class="consequences__item-title">Сложным формам аллергии</figcaption>
                             </figure>
-                            <p class="consequences__text">Может появится сильная реакция на на привычную пищу, одежду, средства гигиены
+                            <p class="consequences__text">Может появиться сильная реакция на привычную пищу, одежду, средства гигиены
                             </p>
                         </li>
                         <li class="consequences__item">
